force-app/main/default/objects/UiSettings__c/UiSettings__c.object-meta.xml
<CustomObject>
    <label>UiSettings</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>UiSettings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UiSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>