force-app/main/default/objects/UiSettings__c/fields/Time_Internal__c.field-meta.xml
<CustomField>
    <fullName>Time_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Internal</label>
    <type>Checkbox</type>
</CustomField>