force-app/main/default/objects/UiSettings__c/fields/Time_Operational__c.field-meta.xml
<CustomField>
    <fullName>Time_Operational__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Operational</label>
    <type>Checkbox</type>
</CustomField>